Configure DetailActivity's up button functionality

--- a/S04.01-Exercise-LaunchNewActivity/app/src/main/AndroidManifest.xml
+++ b/S04.01-Exercise-LaunchNewActivity/app/src/main/AndroidManifest.xml
@@ -34,11 +34,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!-- TODO (4) Configure DetailActivity's up button functionality -->
+        <!-- COMPLETED (4) Configure DetailActivity's up button functionality -->
         <activity
             android:name=".DetailActivity"
             android:label="@string/title_activity_detail"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
