--- a/S06.01-Exercise-LaunchSettingsActivity/app/src/main/AndroidManifest.xml
+++ b/S06.01-Exercise-LaunchSettingsActivity/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name=".data.SettingsActivity"></activity>
     </application>
 
 </manifest>
