--- a/S10.03-Exercise-FirebaseJobDispatcher/app/src/main/AndroidManifest.xml
+++ b/S10.03-Exercise-FirebaseJobDispatcher/app/src/main/AndroidManifest.xml
@@ -63,8 +63,12 @@
             android:name=".sync.SunshineSyncIntentService"
             android:exported="false" />
 
-        <!-- TODO (8) Declare SunshineFirebaseJobService as a service in the manifest -->
+        <!-- COMPLETED (8) Declare SunshineFirebaseJobService as a service in the manifest -->
+        <service
+            android:name=".sync.SunshineFirebaseJobService"
+            android:exported="false">
             <!-- TODO (9) Declare an intent filter with the action ACTION_EXECUTE -->
+        </service>
 
     </application>
 </manifest>
