--- a/S10.03-Exercise-FirebaseJobDispatcher/app/src/main/AndroidManifest.xml
+++ b/S10.03-Exercise-FirebaseJobDispatcher/app/src/main/AndroidManifest.xml
@@ -67,7 +67,11 @@
         <service
             android:name=".sync.SunshineFirebaseJobService"
             android:exported="false">
-            <!-- TODO (9) Declare an intent filter with the action ACTION_EXECUTE -->
+            <intent-filter>
+            <!-- COMPLETED (9) Declare an intent filter with the action ACTION_EXECUTE -->
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
+            </intent-filter>
+
         </service>
 
     </application>
